--- a/Eid-Ul-Adha-main/images/index.html
+++ b/Eid-Ul-Adha-main/images/index.html
@@ -48,6 +48,16 @@
         </div>
     </section>
     <br><br><br><br>
+    <section>
+        <div class="center-6">
+            <h1><span>Their lives</span>depend on your <span>Information</span></h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi laborum, impedit sint illo <br> dolorum
+                accusantium magnam non facilis aliquam atque.
+            </p>
+        </div>
+
+    </section>
 </body>
 
 </html>
