--- a/Eid-Ul-Adha-main/images/index.html
+++ b/Eid-Ul-Adha-main/images/index.html
@@ -56,8 +56,98 @@
                 accusantium magnam non facilis aliquam atque.
             </p>
         </div>
-
     </section>
+    <section>
+        <div class="box-shadow">
+            <img src="./Frame-1.png" alt="">
+            <h1 class="text">Financlal Help</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque ex ut earum reiciendis animi nulla.this
+                the ver herd working and i my best try</p>
+        </div>
+        <div class="box-shadow">
+            <img src="./Frame-1.png" alt="">
+            <h1 class="text">Information Help</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam atque tenetur, adipisci autem quo
+                quidem!this the ver herd working and i my best try
+            </p>
+        </div>
+    </section>
+    <section>
+        <div class="tryit">
+            <h1><span> Zakat</span> for poor man</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non exercitationem distinctio maxime libero?
+                Architecto ad aliquam quidem a sed quaerat, ducimus cupiditate officiis eos accusamus, magni laudantium,
+                recusandae reiciendis blanditiis fugit id cumque dolore itaque voluptatum saepe dignissimos. Voluptas
+                repudiandae officia totam molestiae laboriosam cum ratione quis numquam veritatis a.</p>
+
+        </div>
+    </section>
+    <section>
+        <div class="box-shadow1">
+            <img src="./Frame-1.png" alt="">
+            <h1 class="text">Information Help</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam atque tenetur, adipisci autem quo
+                quidem!this the ver herd working and i my best try
+            </p>
+        </div>
+        <div class="box-shadow1">
+            <img src="./Frame-1.png" alt="">
+            <h1 class="text">Information Help</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam atque tenetur, adipisci autem quo
+                quidem!this the ver herd working and i my best try
+            </p>
+        </div>
+    </section>
+    <section>
+        <div class="center-img">
+            <img src="./namaj1.jpg" alt="">
+        </div>
+        <div class="center-img">
+            <img src="./namaj2.jpg" alt="">
+        </div>
+        <div class="center-img2">
+            <img class="woman" src="./muslim-woman-is-praying-in-the-house-muslim-woman-praying-picture_csp4272047.webp"
+                alt="">
+        </div>
+    </section>
+    <section>
+        <div class="footer">
+            <h1><span>Extend Your</span>of Charity Eran Rewards of the <span>Hereafter</span></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum sint sequi assumenda magni, quisquam
+                quod minima? Distinctio expedita tempore consequatur.</p>
+            <br> <br><br>
+        </div>
+    </section>
+    <section>
+        <div class="footer-1">
+            <img src="./zakat.jpg" alt="" style="width:70%" ;>
+            <h1>Zakat Found</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque cumque adipisci porro voluptatum est ex
+                debitis iste natus omnis amet?</p>
+            <h1><span class="footer-4">Donate For Zakat</span></h1>
+        </div>
+        <div class="footer-2">
+            <img src="./images.jpg" alt="">
+            <h1>Zakat Found</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque cumque adipisci porro voluptatum est ex
+                debitis iste natus omnis amet?</p>
+            <h1><span class="footer-4">Donate For Zakat</span></h1>
+        </div>
+        <div class="footer-3">
+            <img src="./monajat.jpg" alt="">
+            <h1>Zakat Found</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque cumque adipisci porro voluptatum est ex
+                debitis iste natus omnis amet?</p>
+            <h1><span class="footer-4">Donate For Zakat</span></h1>
+        </div>
+    </section>
+    <br><br>
+    <br><br>
+    <br><br>
 </body>
+<footer class="last-part">
+    <h2>Eid Ul Adha</h2>
+    <p>I'm gonna do it..! </p>
+</footer>
 
 </html>
